<resources>
    <string name="app_name">ZWALLET</string>
    <string name="helloworld" />
    <string name="make_your_easy_payment">Make your easy Payment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_login">Login</string>
    <string name="text_login_desc">Login to your existing account to access all the features in Zwallet.</string>
    <string name="hint_email">Enter your email address</string>
    <string name="hint_password">Enter your password</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_account_to_access_zwallet">Create your account to access ZWallet</string>
    <string name="hint_username">Enter your username</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm">Confirm</string>
    <string name="edit">Edit</string>
</resources>