<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.register.RegisterFragment"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="100dp"
        style="@style/TextView.SplashScreen"
        android:textColor="@color/primaryColor"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:id="@+id/containerFormRegister"
        app:layout_constraintTop_toBottomOf="@id/textLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:gravity="center"
            android:id="@+id/textsignup"
            style="@style/TextView.SplashScreen"
            android:textColor="@color/greyDarkColor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textsignupdesc"
            android:gravity="center"
            android:layout_marginTop="20dp"
            style="@style/TextView.SplashScreen.Description"
            android:textColor="@color/greyDarkColor"
            android:text="@string/create_your_account_to_access_zwallet"
            app:layout_constraintTop_toBottomOf="@id/textsignup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <EditText
            android:id="@+id/inputusername"
            style="@style/EditText.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="45dp"
            android:autofillHints="userName"
            android:background="@drawable/background_input"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textsignupdesc" />

        <EditText
            android:id="@+id/inputemailsginup"
            style="@style/EditText.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="45dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/background_input"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:hint="@string/enter_your_e_mail"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputusername"/>

        <EditText
            android:id="@+id/inputPassword"
            style="@style/EditText.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="45dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/background_input"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputemailsginup"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignup"
            style="@style/TextView.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/background_button_auth"
            android:paddingHorizontal="24dp"
            android:paddingVertical="15dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#88888F"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputPassword" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/btnSignup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Already have an account ? Lets"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnLogin"
                app:layout_constraintEnd_toStartOf="@id/gotosignup"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="3dp"
                android:autoLink="all"
                android:linksClickable="true"
                android:id="@+id/gotologin"
                android:text="Login"
                android:textColor="@color/primaryColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/createAccount"
                app:layout_constraintTop_toBottomOf="@id/btnLogin" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>