<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.forgot.ResetPassword2"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="100dp"
        style="@style/TextView.SplashScreen"
        android:textColor="@color/primaryColor"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:id="@+id/containerFormReset"
        app:layout_constraintTop_toBottomOf="@id/textLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:gravity="center"
            android:id="@+id/textresetpw"
            style="@style/TextView.SplashScreen"
            android:textColor="@color/greyDarkColor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textresetdesc"
            android:gravity="center"
            android:layout_marginTop="20dp"
            style="@style/TextView.SplashScreen.Description"
            android:textColor="@color/greyDarkColor"
            android:text="Create and confirm your password"
            app:layout_constraintTop_toBottomOf="@id/textresetpw"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <EditText
            android:id="@+id/inputPassword1"
            style="@style/EditText.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="45dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/background_input"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textresetdesc" />
        <EditText
            android:id="@+id/inputPassword2"
            style="@style/EditText.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="45dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/background_input"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputPassword1" />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            style="@style/TextView.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/background_button_auth"
            android:paddingHorizontal="24dp"
            android:paddingVertical="15dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="#88888F"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>